"Able to start Android emulator in one click"